# IN204-Tetris

./: CMakeLists.txt  Présentation.pptx  README.md  Tetris.cpp  Tetris.h  main.cpp
Tetris/: CMakeLists.txt  Makefile  Tetris.cpp  a.out  affichage.cpp  board.cpp  board.h  game.cpp  game.h  main.cpp  piece.cpp  piece.h  sfml-app  test.cpp  tetris-sfml
