# CMakeList.txt : projet CMake pour Tetris, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("Tetris")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (Tetris "Tetris.cpp" "Tetris.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
